plugins/xpath/xpath-lang/testData/xpath2/highlighting/numberFollowedByToken2.xpath2
5 div 2<error descr="Number literal must be followed by whitespace in XPath 2">gt</error> 1